--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -629,7 +629,7 @@ msgstr ""
 
 #: ../Doc/tutorial/errors.rst:496
 msgid "Raising and Handling Multiple Unrelated Exceptions"
-msgstr "Lanzando y Gestionando Múltiples Excepciones no Relacionadas"
+msgstr "Lanzando y gestionando múltiples excepciones no relacionadas"
 
 #: ../Doc/tutorial/errors.rst:498
 msgid ""
