--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -343,7 +343,7 @@ msgid ""
 "the *try clause*, but also those that occur inside functions that are called "
 "(even indirectly) in the *try clause*. For example::"
 msgstr ""
-"Los gestionadores de excepciones no sólo gestionan excepciones que ocurren "
+"Los gestores de excepciones no sólo gestionan excepciones que ocurren "
 "inmediatamente en la *cláusula try*, sino también aquellas que ocurren "
 "dentro de funciones que son llamadas (incluso indirectamente) en la "
 "*cláusula try*. Por ejemplo::"
