--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -685,7 +685,7 @@ msgstr ""
 
 #: ../Doc/tutorial/errors.rst:582
 msgid "Enriching Exceptions with Notes"
-msgstr "Enriqueciendo Excepciones con Notas"
+msgstr "Enriqueciendo excepciones con notas"
 
 #: ../Doc/tutorial/errors.rst:584
 msgid ""
