--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-21 10:44-0300\n"
+"PO-Revision-Date: 2023-03-22 12:57+0000\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/howto/sockets.rst:5
 msgid "Socket Programming HOWTO"
@@ -391,8 +391,8 @@ msgstr ""
 "mensajería - en Python envías cadenas y usas ``len()`` para determinar su "
 "longitud (incluso si tiene caracteres ``\\0`` incrustados). Es "
 "principalmente el código receptor el que se vuelve más complejo. (Y en C no "
-"es mucho peor, excepto que no puedes usar ``strlen`` si el mensaje tiene "
-"``\\0`` incrustados)."
+"es mucho peor, excepto que no puedes usar ``strlen`` si el mensaje tiene ``"
+"\\0`` incrustados)."
 
 #: ../Doc/howto/sockets.rst:223
 msgid ""
@@ -476,22 +476,22 @@ msgstr ""
 "principal problema es que no todas las máquinas utilizan los mismos formatos "
 "para datos binarios. Por ejemplo, `orden de bytes de red <https://en."
 "wikipedia.org/wiki/Endianness#Networking>`_ es big-endian, con el byte más "
-"significativo primero, por lo que es un entero de 16 bits con el valor ``1` "
-"` serían los dos bytes hexadecimales `` 00 01``. Sin embargo, los "
-"procesadores más comunes (x86/AMD64, ARM, RISC-V) son little-endian, con el "
-"byte menos significativo primero; ese mismo ``1`` sería ``01 00``."
+"significativo primero, por lo que es un entero de 16 bits con el valor ``1`` "
+"serían los dos bytes hexadecimales ``00 01``. Sin embargo, los procesadores "
+"más comunes (x86/AMD64, ARM, RISC-V) son little-endian, con el byte menos "
+"significativo primero; ese mismo ``1`` sería ``01 00``."
 
 #: ../Doc/howto/sockets.rst:262
 msgid ""
 "Socket libraries have calls for converting 16 and 32 bit integers - ``ntohl, "
-"htonl, ntohs, htons`` where \"n\" means *network* and \"h\" means *host*, "
-"\"s\" means *short* and \"l\" means *long*. Where network order is host "
-"order, these do nothing, but where the machine is byte-reversed, these swap "
-"the bytes around appropriately."
+"htonl, ntohs, htons`` where \"n\" means *network* and \"h\" means *host*, \"s"
+"\" means *short* and \"l\" means *long*. Where network order is host order, "
+"these do nothing, but where the machine is byte-reversed, these swap the "
+"bytes around appropriately."
 msgstr ""
 "Las bibliotecas de socket tienen llamadas para convertir enteros de 16 y 32 "
 "bits - ``ntohl, htonl, ntohs, htons`` donde \"n\" significa *red* y \"h\" "
-"significa *host*, \"s\" significa *corto* y \"l \" significa *largo*. Cuando "
+"significa *host*, \"s\" significa *corto* y \"l\" significa *largo*. Cuando "
 "el orden de la red es el orden del host, estos no hacen nada, pero cuando la "
 "máquina está invertida en bytes, intercambian los bytes de manera adecuada."
 
@@ -504,12 +504,12 @@ msgid ""
 "be 8. Of course, this doesn't fit well with fixed-length messages. "
 "Decisions, decisions."
 msgstr ""
-"En estos días de máquinas de 32 bit, la representación ascii de los datos "
+"En estos días de máquinas de 64 bit, la representación ASCII de los datos "
 "binarios es con frecuencia más pequeña que la representación binaria. Esto "
-"es porque una sorprendente cantidad de veces, todos esos \"longs\" tienen de "
-"valor 0, o tal vez 1. La cadena \"0\" tendría dos bytes, mientras el binario "
-"cuatro. Por supuesto, esto no funciona bien con los mensajes de longitud "
-"fija. Decisiones, decisiones."
+"es porque una sorprendente cantidad de veces, todos esos enteros tienen el "
+"valor 0, o tal vez 1. La cadena ``\"0\"`` tendría dos bytes, mientras un "
+"entero completo de 64 bit tendría 8. Por supuesto, esto no funciona bien con "
+"los mensajes de longitud fija. Decisiones, decisiones."
 
 #: ../Doc/howto/sockets.rst:277
 msgid "Disconnecting"
