--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -391,8 +391,8 @@ msgstr ""
 "mensajería - en Python envías cadenas y usas ``len()`` para determinar su "
 "longitud (incluso si tiene caracteres ``\\0`` incrustados). Es "
 "principalmente el código receptor el que se vuelve más complejo. (Y en C no "
-"es mucho peor, excepto que no puedes usar ``strlen`` si el mensaje tiene ``"
-"\\0`` incrustados)."
+"es mucho peor, excepto que no puedes usar ``strlen`` si el mensaje tiene "
+"``\\0`` incrustados)."
 
 #: ../Doc/howto/sockets.rst:223
 msgid ""
@@ -484,10 +484,10 @@ msgstr ""
 #: ../Doc/howto/sockets.rst:262
 msgid ""
 "Socket libraries have calls for converting 16 and 32 bit integers - ``ntohl, "
-"htonl, ntohs, htons`` where \"n\" means *network* and \"h\" means *host*, \"s"
-"\" means *short* and \"l\" means *long*. Where network order is host order, "
-"these do nothing, but where the machine is byte-reversed, these swap the "
-"bytes around appropriately."
+"htonl, ntohs, htons`` where \"n\" means *network* and \"h\" means *host*, "
+"\"s\" means *short* and \"l\" means *long*. Where network order is host "
+"order, these do nothing, but where the machine is byte-reversed, these swap "
+"the bytes around appropriately."
 msgstr ""
 "Las bibliotecas de socket tienen llamadas para convertir enteros de 16 y 32 "
 "bits - ``ntohl, htonl, ntohs, htons`` donde \"n\" significa *red* y \"h\" "
