--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-22 13:04+0000\n"
+"PO-Revision-Date: 2023-03-23 09:51-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -490,10 +490,11 @@ msgid ""
 "bytes around appropriately."
 msgstr ""
 "Las bibliotecas de socket tienen llamadas para convertir enteros de 16 y 32 "
-"bits - ``ntohl, htonl, ntohs, htons`` donde \"n\" significa *red* y \"h\" "
-"significa *host*, \"s\" significa *corto* y \"l\" significa *largo*. Cuando "
-"el orden de la red es el orden del host, estos no hacen nada, pero cuando la "
-"máquina está invertida en bytes, intercambian los bytes de manera adecuada."
+"bits - ``ntohl, htonl, ntohs, htons`` donde \"n\" significa *network* (red) "
+"y \"h\" significa *host* (host), \"s\" significa *short* (corto) y \"l\" "
+"significa *long* (largo). Cuando el orden de la red es el orden del host, "
+"estos no hacen nada, pero cuando la máquina está invertida en bytes, "
+"intercambian los bytes de manera adecuada."
 
 #: ../Doc/howto/sockets.rst:268
 msgid ""
