Apply suggestions from code review
Co-authored-by: Marcos Medrano <786907+mmmarcos@users.noreply.github.com>

--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -333,8 +333,8 @@ msgstr ""
 "Si la evaluación de una expresión en el encabezado de una cláusula :keyword:"
 "`!except` genera una excepción, la búsqueda original de un controlador se "
 "cancela y comienza una búsqueda de la nueva excepción en el código "
-"circundante y en la pila de llamadas (se trata como si todo el La "
-"declaración :keyword:`try` generó la excepción)."
+"circundante y en la pila de llamadas (se trata como si toda la sentencia "
+":keyword:`try` generara la excepción)."
 
 #: ../Doc/reference/compound_stmts.rst:269
 msgid ""
@@ -452,7 +452,7 @@ msgid ""
 msgstr ""
 "Si la excepción generada no es un grupo de excepciones y su tipo coincide "
 "con una de las cláusulas :keyword:`!except*`, un grupo de excepciones la "
-"captura y la ajusta con una cadena de mensaje vacía. ::"
+"captura y la encapsula con una cadena de mensaje vacía. ::"
 
 #: ../Doc/reference/compound_stmts.rst:383
 msgid ""
