--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -333,8 +333,8 @@ msgstr ""
 "Si la evaluación de una expresión en el encabezado de una cláusula :keyword:"
 "`!except` genera una excepción, la búsqueda original de un controlador se "
 "cancela y comienza una búsqueda de la nueva excepción en el código "
-"circundante y en la pila de llamadas (se trata como si toda la sentencia "
-":keyword:`try` generara la excepción)."
+"circundante y en la pila de llamadas (se trata como si toda la sentencia :"
+"keyword:`try` generara la excepción)."
 
 #: ../Doc/reference/compound_stmts.rst:269
 msgid ""
