Traducido archivo c-api/type.po

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-02 01:37+0200\n"
+"PO-Revision-Date: 2023-04-08 13:38-0600\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/c-api/type.rst:6
 msgid "Type Objects"
@@ -179,12 +180,16 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
+"Devuelve el nombre del tipo de objeto. Equivalente a obtener el atributo "
+"``__name__`` del tipo de objeto."
 
 #: ../Doc/c-api/type.rst:117
 msgid ""
 "Return the type's qualified name. Equivalent to getting the type's "
 "``__qualname__`` attribute."
 msgstr ""
+"Devuelve el nombre adecuado del tipo de objeto. Equivalente a obtener el "
+"atributo ``__qualname__`` del tipo de objeto."
 
 #: ../Doc/c-api/type.rst:124
 msgid ""
@@ -271,6 +276,8 @@ msgid ""
 "Find the first superclass whose module was created from the given :c:type:"
 "`PyModuleDef` *def*, and return that module."
 msgstr ""
+"Encuentra la primer superclase cuyo módulo fue creado a partir del :c:type:"
+"`PyModuleDef` *def* dado, y devuelve ese módulo."
 
 #: ../Doc/c-api/type.rst:176
 #, fuzzy
@@ -288,6 +295,11 @@ msgid ""
 "other places where a method's defining class cannot be passed using the :c:"
 "type:`PyCMethod` calling convention."
 msgstr ""
+"Esta función está pensada para ser utilizada junto con :c:func: "
+"`PyModule_GetState()` para obtener el estado del módulo de los métodos slot "
+"(como :c:member`~PyTypeObject.tp._init` o :c:member:`~PyNumberMethods."
+"nb_add`) y otros lugares donde la clase que define un método no se puede "
+"pasar usando la convención de llamada de :c:type:`PyCMethod`."
 
 #: ../Doc/c-api/type.rst:188
 msgid "Creating Heap-Allocated Types"
@@ -511,6 +523,8 @@ msgid ""
 ":c:member:`~PyBufferProcs.bf_getbuffer` and :c:member:`~PyBufferProcs."
 "bf_releasebuffer` are now available under the limited API."
 msgstr ""
+":c:member:`~PyBufferProcs.bf_getbuffer` y :c:member:`~PyBufferProcs."
+"bf_releasebuffer` ahora están disponibles en la API limitada."
 
 #: ../Doc/c-api/type.rst:308
 msgid ""
