--- a/c-api/type.po
+++ b/c-api/type.po
@@ -11,16 +11,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-08 13:38-0600\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language-Team: python-doc-es\n"
+"PO-Revision-Date: 2023-04-08 13:41+0200\n"
+"Last-Translator: Gonzalo Martinez <gmtzoliva29@gmail.com>\n"
 "Language: es\n"
+"Language-Team: python-doc-es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/c-api/type.rst:6
 msgid "Type Objects"
@@ -180,16 +179,16 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
-"Devuelve el nombre del tipo de objeto. Equivalente a obtener el atributo "
-"``__name__`` del tipo de objeto."
+"Devuelve el nombre del tipo de objeto. Equivalente a obtener el atributo ``__name__`` "
+"del objeto tipo."
 
 #: ../Doc/c-api/type.rst:117
 msgid ""
 "Return the type's qualified name. Equivalent to getting the type's "
 "``__qualname__`` attribute."
 msgstr ""
-"Devuelve el nombre adecuado del tipo de objeto. Equivalente a obtener el "
-"atributo ``__qualname__`` del tipo de objeto."
+"Devuelve el nombre adecuado del tipo de objeto. Equivalente a obtener el atributo"
+"``__qualname__`` del objeto tipo."
 
 #: ../Doc/c-api/type.rst:124
 msgid ""
@@ -295,11 +294,11 @@ msgid ""
 "other places where a method's defining class cannot be passed using the :c:"
 "type:`PyCMethod` calling convention."
 msgstr ""
-"Esta función está pensada para ser utilizada junto con :c:func: "
-"`PyModule_GetState()` para obtener el estado del módulo de los métodos slot "
-"(como :c:member`~PyTypeObject.tp._init` o :c:member:`~PyNumberMethods."
-"nb_add`) y otros lugares donde la clase que define un método no se puede "
-"pasar usando la convención de llamada de :c:type:`PyCMethod`."
+"Esta función está pensada para ser utilizada junto con :c:func:"
+"`PyModule_GetState()` para obtener el estado del módulo de los métodos slot (como :c:"
+"member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods.nb_add`) y"
+"en otros lugares donde la clase que define a un método no se puede pasar utilizando la"
+"convención de llamada de :c:type:`PyCMethod`"
 
 #: ../Doc/c-api/type.rst:188
 msgid "Creating Heap-Allocated Types"
@@ -523,7 +522,7 @@ msgid ""
 ":c:member:`~PyBufferProcs.bf_getbuffer` and :c:member:`~PyBufferProcs."
 "bf_releasebuffer` are now available under the limited API."
 msgstr ""
-":c:member:`~PyBufferProcs.bf_getbuffer` y :c:member:`~PyBufferProcs."
+":c:member:`~PyBufferProcs.bf_getbuffer` and :c:member:`~PyBufferProcs."
 "bf_releasebuffer` ahora están disponibles en la API limitada."
 
 #: ../Doc/c-api/type.rst:308
