--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-11-26 15:23+0100\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-04-11 11:32-0400\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/clinic.rst:5
 msgid "Argument Clinic How-To"
@@ -805,7 +806,6 @@ msgstr ""
 "existente con la macro, *no* agregue una coma al final."
 
 #: ../Doc/howto/clinic.rst:542
-#, fuzzy
 msgid ""
 "Compile, then run the relevant portions of the regression-test suite. This "
 "change should not introduce any new compile-time warnings or errors, and "
@@ -2179,7 +2179,6 @@ msgstr ""
 "*ambas* funciones.)"
 
 #: ../Doc/howto/clinic.rst:1120
-#, fuzzy
 msgid ""
 "Sorry, there's no syntax for partially cloning a function, or cloning a "
 "function then modifying it.  Cloning is an all-or nothing proposition."
@@ -2353,7 +2352,6 @@ msgstr ""
 "``__init__`` y ``__new__``, que no pueden usar la convención ``METH_METHOD``."
 
 #: ../Doc/howto/clinic.rst:1251
-#, fuzzy
 msgid ""
 "It is not possible to use ``defining_class`` with slot methods.  In order to "
 "fetch the module state from such methods, use :c:func:"
@@ -2482,6 +2480,13 @@ msgid ""
 "about the \"use\" of the uninitialized value.  This value should always be a "
 "non-empty string."
 msgstr ""
+"El valor por defecto utilizado para inicializar la variable C cuando no hay "
+"un valor por defecto, pero no especificar un valor por defecto puede dar "
+"lugar a una advertencia de \"variable no inicializada\". Esto puede ocurrir "
+"fácilmente cuando se utilizan grupos de opciones—aunque un código bien "
+"escrito nunca utilizará este valor, la variable se pasa a la impl, y el "
+"compilador de C se quejará del \"uso\" del valor no inicializado. Este valor "
+"debe ser siempre una cadena no vacía."
 
 #: ../Doc/howto/clinic.rst:1325
 msgid "The name of the C converter function, as a string."
@@ -2521,7 +2526,6 @@ msgstr ""
 "``Modules/zlibmodule.c``:"
 
 #: ../Doc/howto/clinic.rst:1349
-#, fuzzy
 msgid ""
 "This block adds a converter to Argument Clinic named ``ssize_t``.  "
 "Parameters declared as ``ssize_t`` will be declared as type :c:type:"
