--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-11 11:32-0400\n"
+"PO-Revision-Date: 2023-04-11 11:48-0400\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/howto/clinic.rst:5
 msgid "Argument Clinic How-To"
-msgstr "*How-To* Argument Clinic"
+msgstr "Argument Clinic Cómo Hacerlo"
 
 #: ../Doc/howto/clinic.rst
 msgid "author"
@@ -32,7 +32,7 @@ msgstr "autor"
 
 #: ../Doc/howto/clinic.rst:7
 msgid "Larry Hastings"
-msgstr "*Larry Hastings*"
+msgstr "Larry Hastings"
 
 msgid "Abstract"
 msgstr "Resumen"
@@ -2360,8 +2360,8 @@ msgid ""
 "``setattro`` slot method in ``Modules/_threadmodule.c``::"
 msgstr ""
 "No es posible usar ``defining_class`` con métodos de ranura (*slot*). Para "
-"obtener el estado del módulo de dichos métodos, use "
-"``_PyType_GetModuleByDef`` para buscar el módulo y luego :c:func:"
+"obtener el estado del módulo de dichos métodos, use :c:func:"
+"`PyType_GetModuleByDef` para buscar el módulo y luego :c:func:"
 "`PyModule_GetState` para buscar el estado del módulo. Ejemplo del método de "
 "ranura ``setattro`` en ``Modules/_threadmodule.c``:"
 
