--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-11 11:48-0400\n"
+"PO-Revision-Date: 2023-04-11 12:36-0400\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -2534,8 +2534,8 @@ msgid ""
 "automatically support default values."
 msgstr ""
 "Este bloque agrega un convertidor a Argument Clinic llamado ``ssize_t``. Los "
-"parámetros declarados como ``ssize_t`` se declararán como tipo "
-"``Py_ssize_t`` y serán analizados por la unidad de formato ``'O&'``, que "
+"parámetros declarados como ``ssize_t`` se declararán como tipo :c:type:"
+"`Py_ssize_t` y serán analizados por la unidad de formato ``'O&'``, que "
 "llamará a la función de conversión ``ssize_t_converter``. Las variables "
 "``ssize_t`` admiten automáticamente los valores predeterminados."
 
