--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -638,7 +638,7 @@ msgstr ""
 "Guarde y cierre el archivo, luego ejecute ``Tools/clinic/clinic.py`` en él. "
 "¡Con suerte, todo funcionó --- su bloque ahora tiene salida y se ha generado "
 "un archivo ``.c.h`` ! Vuelva a abrir el archivo en su editor de texto para "
-"ver:"
+"ver::"
 
 #: ../Doc/howto/clinic.rst:411
 msgid ""
@@ -658,7 +658,7 @@ msgid ""
 msgstr ""
 "Para facilitar la lectura, la mayor parte del código de pegamento se ha "
 "generado en un archivo ``.c.h``. Deberá incluir eso en su archivo ``.c`` "
-"original, generalmente justo después del bloque del módulo de la clínica:"
+"original, generalmente justo después del bloque del módulo de la clínica::"
 
 #: ../Doc/howto/clinic.rst:421
 msgid ""
@@ -767,7 +767,7 @@ msgid ""
 "like this::"
 msgstr ""
 "Reiteremos, solo porque es un poco extraño. Su código ahora debería verse "
-"así:"
+"así::"
 
 #: ../Doc/howto/clinic.rst:477
 msgid ""
@@ -916,7 +916,7 @@ msgid ""
 "``pickle.Pickler.dump``, it'd look like this::"
 msgstr ""
 "Por ejemplo, si quisiéramos cambiar el nombre de las funciones de C "
-"generadas para ``pickle.Pickler.dump``, se vería así:"
+"generadas para ``pickle.Pickler.dump``, se vería así::"
 
 #: ../Doc/howto/clinic.rst:593
 msgid ""
@@ -1071,7 +1071,7 @@ msgstr ""
 "los parámetros que desea agrupar y un ``]`` en una línea después de estos "
 "parámetros. Como ejemplo, así es como ``curses.window.addch`` usa grupos "
 "opcionales para hacer que los primeros dos parámetros y el último parámetro "
-"sean opcionales:"
+"sean opcionales::"
 
 #: ../Doc/howto/clinic.rst:697
 msgid "Notes:"
@@ -1723,7 +1723,7 @@ msgid ""
 "converter::"
 msgstr ""
 "Como ejemplo, aquí está nuestra muestra ``pickle.Pickler.dump`` usando el "
-"convertidor adecuado:"
+"convertidor adecuado::"
 
 #: ../Doc/howto/clinic.rst:878
 msgid ""
@@ -2285,7 +2285,7 @@ msgid ""
 msgstr ""
 "Por otro lado, si tiene muchas funciones que usarán el mismo tipo para "
 "``self``, es mejor crear su propio convertidor, subclasificando "
-"``self_converter`` pero sobrescribiendo el miembro ``type``:"
+"``self_converter`` pero sobrescribiendo el miembro ``type``::"
 
 #: ../Doc/howto/clinic.rst:1207
 msgid "Using a \"defining class\" converter"
@@ -2363,7 +2363,7 @@ msgstr ""
 "obtener el estado del módulo de dichos métodos, use :c:func:"
 "`PyType_GetModuleByDef` para buscar el módulo y luego :c:func:"
 "`PyModule_GetState` para buscar el estado del módulo. Ejemplo del método de "
-"ranura ``setattro`` en ``Modules/_threadmodule.c``:"
+"ranura ``setattro`` en ``Modules/_threadmodule.c``::"
 
 #: ../Doc/howto/clinic.rst:1266
 msgid "See also :pep:`573`."
@@ -2523,7 +2523,7 @@ msgid ""
 "c``::"
 msgstr ""
 "Aquí está el ejemplo más simple de un convertidor personalizado, de "
-"``Modules/zlibmodule.c``:"
+"``Modules/zlibmodule.c``::"
 
 #: ../Doc/howto/clinic.rst:1349
 msgid ""
@@ -2591,7 +2591,7 @@ msgid ""
 msgstr ""
 "Para convertir una función usando ``METH_O``, asegúrese de que el único "
 "argumento de la función esté usando el convertidor de ``object`` y marque "
-"los argumentos como solo posicional:"
+"los argumentos como solo posicional::"
 
 #: ../Doc/howto/clinic.rst:1389
 msgid ""
@@ -3235,7 +3235,7 @@ msgid ""
 msgstr ""
 "Si está convirtiendo una función que no está disponible en todas las "
 "plataformas, hay un truco que puede usar para hacer la vida un poco más "
-"fácil. El código existente probablemente se ve así:"
+"fácil. El código existente probablemente se ve así::"
 
 #: ../Doc/howto/clinic.rst:1714
 msgid ""
@@ -3251,7 +3251,7 @@ msgid ""
 "the ``#ifdef``, like so::"
 msgstr ""
 "En este escenario, debe encerrar el cuerpo de su función *impl* dentro de "
-"``#ifdef``, así:"
+"``#ifdef``, así::"
 
 #: ../Doc/howto/clinic.rst:1737
 msgid ""
@@ -3290,7 +3290,7 @@ msgstr ""
 "Aquí es donde Argument Clinic se vuelve muy inteligente. De hecho, detecta "
 "que el bloqueo de Argument Clinic podría estar desactivado por el "
 "``#ifdef``. Cuando eso sucede, genera un pequeño código adicional que se ve "
-"así:"
+"así::"
 
 #: ../Doc/howto/clinic.rst:1760
 msgid ""
