--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-11 12:36-0400\n"
+"PO-Revision-Date: 2023-04-11 16:41-0400\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -2233,7 +2233,7 @@ msgid ""
 "the C code::"
 msgstr ""
 "Como ejemplo, aquí hay un bloque de Python que agrega una variable entera "
-"estática al código C ::"
+"estática al código C::"
 
 #: ../Doc/howto/clinic.rst:1155
 msgid "Using a \"self converter\""
@@ -2503,7 +2503,7 @@ msgid ""
 "name of the variable when passing it into the impl function."
 msgstr ""
 "Un valor booleano. Si es verdadero, Argument Clinic agregará un ``&`` "
-"delante del nombre de la variable al pasarlo a la función *impl*."
+"delante del nombre de la variable al pasarlo a la función impl."
 
 #: ../Doc/howto/clinic.rst:1336
 msgid "``parse_by_reference``"
