--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-11 16:41-0400\n"
+"PO-Revision-Date: 2023-04-11 16:58-0400\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -2359,11 +2359,11 @@ msgid ""
 "`PyModule_GetState` to fetch the module state.  Example from the "
 "``setattro`` slot method in ``Modules/_threadmodule.c``::"
 msgstr ""
-"No es posible usar ``defining_class`` con métodos de ranura (*slot*). Para "
-"obtener el estado del módulo de dichos métodos, use :c:func:"
-"`PyType_GetModuleByDef` para buscar el módulo y luego :c:func:"
-"`PyModule_GetState` para buscar el estado del módulo. Ejemplo del método de "
-"ranura ``setattro`` en ``Modules/_threadmodule.c``::"
+"No es posible usar ``defining_class`` con métodos de ranura. Para obtener el "
+"estado del módulo de dichos métodos, use :c:func:`PyType_GetModuleByDef` "
+"para buscar el módulo y luego :c:func:`PyModule_GetState` para buscar el "
+"estado del módulo. Ejemplo del método de ranura ``setattro`` en ``Modules/"
+"_threadmodule.c``::"
 
 #: ../Doc/howto/clinic.rst:1266
 msgid "See also :pep:`573`."
@@ -2535,7 +2535,7 @@ msgid ""
 msgstr ""
 "Este bloque agrega un convertidor a Argument Clinic llamado ``ssize_t``. Los "
 "parámetros declarados como ``ssize_t`` se declararán como tipo :c:type:"
-"`Py_ssize_t` y serán analizados por la unidad de formato ``'O&'``, que "
+"`Py_ssize_t`, y serán analizados por la unidad de formato ``'O&'``, que "
 "llamará a la función de conversión ``ssize_t_converter``. Las variables "
 "``ssize_t`` admiten automáticamente los valores predeterminados."
 
