--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-04-11 17:14-0400\n"
+"PO-Revision-Date: 2023-04-11 17:45-0400\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -139,9 +139,9 @@ msgid ""
 "builtin.  With Argument Clinic, that's a thing of the past!"
 msgstr ""
 "Finalmente, la motivación original de Argument Clinic era proporcionar "
-"\"signaturas\" de introspección para las incorporaciones de CPython. Solía "
-"ser, las funciones de consulta de introspección lanzarían una excepción si "
-"pasaba un archivo incorporado. ¡Con Argument Clinic, eso es cosa del pasado!"
+"\"firmas\" de introspección para las incorporaciones de CPython. Solía ser, "
+"las funciones de consulta de introspección lanzarían una excepción si pasaba "
+"un archivo incorporado. ¡Con Argument Clinic, eso es cosa del pasado!"
 
 #: ../Doc/howto/clinic.rst:70
 msgid ""
@@ -261,7 +261,7 @@ msgid ""
 "*checksum line*."
 msgstr ""
 "La última línea (``/*[clinic end generated code: checksum=...]*/``) es la "
-"*línea de suma de comprobación* (*chemsum line*)."
+"*línea de suma de comprobación* (*checksum line*)."
 
 #: ../Doc/howto/clinic.rst:134
 msgid "In between the start line and the end line is the *input*."
@@ -368,7 +368,7 @@ msgstr ""
 #: ../Doc/howto/clinic.rst:188
 msgid "Add the following boilerplate above the function, creating our block::"
 msgstr ""
-"Agrega la siguiente plantilla sobre la función, creando nuestro bloque ::"
+"Agrega la siguiente plantilla sobre la función, creando nuestro bloque::"
 
 #: ../Doc/howto/clinic.rst:193
 msgid ""
@@ -432,7 +432,7 @@ msgid ""
 msgstr ""
 "Sobre el docstring, ingrese el nombre de la función, seguido de una línea en "
 "blanco. Este debería ser el nombre de Python de la función, y debería ser la "
-"ruta de puntos completa a la función; debería comenzar con el nombre del "
+"ruta de puntos completa a la función—debería comenzar con el nombre del "
 "módulo, incluir cualquier submódulo y, si la función es un método en una "
 "clase, debe incluir el nombre de la clase también."
 
